# face-onnx

./: Cargo.toml  README.md  build.rs  face_detector_opt.onnx  face_detector_opt_transformed.onnx  gen_onnx_test_data.py  onnx_initializers_to_consts.py  onnx_outputs.pt  rename_node_input_output.py
src/: main.rs
src/model/: face-detector.onnx  mod.rs
